Fix responsiveness of search well and languages list
* Search input doesn't overlap the checkboxes now
* Languages are now set in 2 columns if there's room for it

--- a/css/boxed.css
+++ b/css/boxed.css
@@ -62,7 +62,7 @@
 
 @media screen and (min-width: 480px) and (max-width: 768px) {
 	div#data div.span4 {
-		width: 50%;
-		margin-right: 0;
+		width: 49%;
+		margin-right: 3px;
 	}
 }
